--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 spring.credit-gate.url=http://185.119.57.197:9999/credit
 spring.payment-gate.url=http://185.119.57.197:9999/payment
-spring.datasource.url=jdbc:mysql://localhost:3306/aqa_shop
+spring.datasource.url=jdbc:mysql://localhost:3306/qa_shop
 spring.datasource.username=user
 spring.datasource.password=pass
